# USGS-Projector

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  configure  configure.in  iiasa_temp_jan.tif  mkinstalldirs  projector.kdevprj  projector.lsm
projector/: BaseProgress.cpp  BaseProgress.h  CLineProgress.cpp  CLineProgress.h  DRect.h  Main.cpp  Makefile.am  Makefile.in  ProjUtil.cpp  ProjUtil.h  ProjectionParams.cpp  ProjectionParams.h  Projector.cpp  Projector.h  ProjectorException.cpp  ProjectorException.h  eqrect.txt  sin.txt  tm.txt
projector/.deps/: Main.P  ProjUtil.P  ProjectionParams.P  Projector.P  ProjectorException.P
projector/docs/: Makefile.in
projector/docs/en/: Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
